--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>Some Demo</h1>
     <p><a href="css_demo.html"> This is a link to the demo file</a></p>
+    <p> <a href="font-sample.html"> This is a link to the font-sample file</a></p>
     <p>This is something different.</p>
     <h4>Arielle Mohr </h4>
   </body>
