--- a/font-sample.html
+++ b/font-sample.html
@@ -18,7 +18,7 @@
       .copy{
         font-family: "Radio Canada", cursive;
       }
-      .end{ font-family: "Watr Brush", cursive;
+      .end{ font-family: "Water Brush", cursive;
       }
         
       
