--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <title>W3 Demo Page</title>
+ 
   </head>
   <body>
     <h1>Some Demo</h1>
     <p><a href="css_demo.html"> This is a link to the demo file</a></p>
     <p> <a href="font-sample.html"> This is a link to the font-sample file</a></p>
+    <p> <a href="bootstrap-sample.html">This is a link to the bootstrap-sample</a> </p>
     <p>This is something different.</p>
     <h4>Arielle Mohr </h4>
   </body>
