--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -12,21 +12,29 @@
     <title>Something different? </title>
   </head>
   <body>
-    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=1.00xw:0.669xh;0,0.190xh&resize=768:*" class="img-fluid" alt="Puppy">
+    <img src="https://photos.app.goo.gl/NnQsFfiG3X3qp6CK6" class="img-fluid" alt="Beach">
     <div class="container">
   <div class="row">
-    <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
-    <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
+    <div class="col-6 col-sm-4">.col-6 .col-sm-4
+     <h1>Something different? </h1>
+    </div>
+    <div class="col-6 col-sm-4">.col-6 .col-sm-4
+     <h1>Something different? </h1>
+    </div>
 
     <!-- Force next columns to break to new line at md breakpoint and up -->
-    <div class="w-100 d-none d-md-block"></div>
+    <div class="w-100 d-none d-md-block">
+     <h1>Something different? </h1>
+    </div>
 
-    <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
+    <div class="col-6 col-sm-4">.col-6 .col-sm-4
+    
+    </div>
     <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
   </div>
 </div>
     <button type="button" class="btn btn-primary">Primary</button>
-    <h1>Something different? </h1>
+   
 
     <!-- Optional JavaScript; choose one of the two! -->
 
