--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -12,28 +12,25 @@
     <title>Something different? </title>
   </head>
   <body>
-    <img src="https://photos.app.goo.gl/NnQsFfiG3X3qp6CK6" class="img-fluid" alt="Beach">
     <div class="container">
   <div class="row">
-    <div class="col-6 col-sm-4">.col-6 .col-sm-4
-     <h1>Something different? </h1>
-    </div>
-    <div class="col-6 col-sm-4">.col-6 .col-sm-4
-     <h1>Something different? </h1>
-    </div>
+    <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
+    <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
+    <a href="https://lh3.googleusercontent.com/5zlmG-BklR3tfhY3LBzhEvjlpwtvAh2Lyk_bwxmIKtee8hEuVx0SxinRviADdA4rALobX23S7gbypxDPo-6CWdhpSPyCvpvR3CEVX2XndvlXIe0cKJAhmToH61GZYfZeX5GjSz2hE3s=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/5zlmG-BklR3tfhY3LBzhEvjlpwtvAh2Lyk_bwxmIKtee8hEuVx0SxinRviADdA4rALobX23S7gbypxDPo-6CWdhpSPyCvpvR3CEVX2XndvlXIe0cKJAhmToH61GZYfZeX5GjSz2hE3s=w600-h315-p-k" /> </a> class="img-fluid" alt="Beach">
+
 
     <!-- Force next columns to break to new line at md breakpoint and up -->
     <div class="w-100 d-none d-md-block">
      <h1>Something different? </h1>
     </div>
 
-    <div class="col-6 col-sm-4">.col-6 .col-sm-4
-    
-    </div>
     <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
+        <button type="button" class="btn btn-primary">Primary</button>
+    <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
+    
   </div>
 </div>
-    <button type="button" class="btn btn-primary">Primary</button>
+
    
 
     <!-- Optional JavaScript; choose one of the two! -->
