--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -27,14 +27,14 @@
     -->
     <div class="container">
   <div class="row">
-    <div class="col-6 col-sm-3"><h1> Something Great </h1> </div>
-    <div class="col-6 col-sm-3">.<h1> Something Great </h1></div>
+    <div class="col-6 col-sm-3"><h1> Something 1 </h1> </div>
+    <div class="col-6 col-sm-3">.<h1> Something 2 </h1></div>
 
     <!-- Force next columns to break to new line -->
     <div class="w-100"></div>
 
-    <div class="col-6 col-sm-3">.<h1> Something Great </h1></div>
-    <div class="col-6 col-sm-3"><h1> Something Great </h1></div>
+    <div class="col-6 col-sm-3">.<h1> Something 3 </h1></div>
+    <div class="col-6 col-sm-3"><h1> Something 4 </h1></div>
   </div>
 </div>
   </body>
