--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,7 +14,7 @@
   <body>
  <img src="https://lh3.googleusercontent.com/5zlmG-BklR3tfhY3LBzhEvjlpwtvAh2Lyk_bwxmIKtee8hEuVx0SxinRviADdA4rALobX23S7gbypxDPo-6CWdhpSPyCvpvR3CEVX2XndvlXIe0cKJAhmToH61GZYfZeX5GjSz2hE3s=w600-h315-p-k" class="img-fluid" alt="Beach"> 
    
-
+<button type="button" class="btn btn-primary">Primary</button>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -25,16 +25,18 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
-    <div class="container">
+   
+<div class="container">
   <div class="row">
-    <div class="col-6 col-sm-3"><h1> Something 1 </h1> </div>
-    <div class="col-6 col-sm-3">.<h1> Something 2 </h1></div>
-
-    <!-- Force next columns to break to new line -->
-    <div class="w-100"></div>
-
-    <div class="col-6 col-sm-3">.<h1> Something 3 </h1></div>
-    <div class="col-6 col-sm-3"><h1> Something 4 </h1></div>
+    <div class="col-sm">
+      Something 1
+    </div>
+    <div class="col-sm">
+     Something 2
+    </div>
+    <div class="col-sm">
+      Something 3
+    </div>
   </div>
 </div>
   </body>
