--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,7 +14,7 @@
   <body>
  <img src="https://lh3.googleusercontent.com/5zlmG-BklR3tfhY3LBzhEvjlpwtvAh2Lyk_bwxmIKtee8hEuVx0SxinRviADdA4rALobX23S7gbypxDPo-6CWdhpSPyCvpvR3CEVX2XndvlXIe0cKJAhmToH61GZYfZeX5GjSz2hE3s=w600-h315-p-k" class="img-fluid" alt="Beach"> 
    
-<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-primary">Some button</button>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
